# tollshray

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  stack.yaml  tollshray.cabal
src/: BenchTollshray.hs  TestTollshray.hs  Tollshray.hs
src/Tollshray/Bench/: All.hs
src/Tollshray/Control/: Evaluator.hs
src/Tollshray/Daemon/: CLI.hs
src/Tollshray/Meta/: Tollshray.hs
src/Tollshray/Tests/: All.hs
