cabal-version:      2.4

-- TODO: disable Cabal rules or warnings about using tabs for indentation.
-- It's a better style: https://dmitryfrank.com/articles/indent_with_tabs_align_with_spaces

name:               tollshray
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: A TBS AI

-- A longer description of the package.
description: A TBS AI.

-- A URL where users can report bugs.
bug-reports: https://github.com/bairyn/tollshray

-- The license under which the package is released.
license-non-spdx:   Permissive OSS style.
license:            0BSD
author:             Byron Johnson
maintainer:         byron@byronjohnson.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
	CHANGELOG.md
	README.md
	Makefile
	Setup.hs

executable tollshray
	main-is:          Tollshray.hs

	-- Modules included in this executable, other than Main.
	other-modules:
		Tollshray.Daemon.CLI

	-- LANGUAGE extensions used by modules in this package.
	-- other-extensions:
	build-depends:
		base ^>=4.15.1.0,
		-- TODO version
		bytestring,
		template-haskell,
		primes,
	hs-source-dirs:   src
	default-language: Haskell2010
