cabal-version:      2.4

-- TODO: disable Cabal rules or warnings about using tabs for indentation.
-- It's a better style: https://dmitryfrank.com/articles/indent_with_tabs_align_with_spaces

-- If using user-level cabal-install installations along with Makefile,
-- consider using cabal-install to install what you can, and then ‘stack’ for
-- the rest.

name:               tollshray
-- Note: be sure the version is consistent in the 3 places it appears:
-- 	- `tollshray.cabal`
-- 	- `CHANGELOG.md`
-- 	- `src/Tollshray/Meta/Tollshray.hs`
-- (TODO: add a check in a suitable location for consistency in these 3 places,
-- e.g. somewhere in the Makefile.)
version:            0.1.1.0-dev

-- A short (one-line) description of the package.
synopsis: A TBS AI

-- A longer description of the package.
description: A TBS AI.

-- A URL where users can report bugs.
bug-reports: https://github.com/bairyn/tollshray

-- The license under which the package is released.
license-non-spdx:   Permissive OSS style.
license:            0BSD
author:             Byron Johnson
maintainer:         byron@byronjohnson.net

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
	CHANGELOG.md
	README.md
	Makefile
	Setup.hs

executable tollshray
	main-is:          Tollshray.hs

	ghc-options:      -Wall

	-- Modules included in this executable, other than Main.
	other-modules:
		Tollshray.Control.Evaluator
		Tollshray.Daemon.CLI
		Tollshray.Tests.All
		Tollshray.Bench.All

	build-depends:
		base ^>=4.15.1.0,
		tollshray,

		-- I haven't looked very closely to see which versions work.  Maybe
		-- older ones work, but for now I either just put the newest one on
		-- there or put the version I personally have installed.
		bytestring >= 0.11.3.1 && < 0.11.4,
		-- template-haskell: I have 2.17.0.0 installed.
		template-haskell >= 2.17.0.0 && < 2.19,
		-- language-rust-0.2.0.27's latest on Hackage is too old; you'll need
		-- the latest on GitHub to build without error.  You can probably build
		-- it by hand by cloning it and running
		-- ‘cabal v2-build && cabal v2-install --lib’ or
		-- ‘stack init && stack install’.
		language-rust >= 0.2.0.27 && < 0.2.2,
		-- languag-c-0.9.1
		language-c >= 0.9.1 && < 0.10,
		-- language-java-0.2.9
		language-java >= 0.2.9 && < 0.3,
		-- language-python-0.5.8
		language-python >= 0.5.8 && < 0.6,
		-- language-bash-0.9.2
		language-bash >= 0.9.2 && < 0.10,
		-- language-javascript-0.7.1.0
		-- I had to run ‘stack install language-javascript’ here, since with
		-- user-level cabal-install v2, it seemed to fail to build.
		language-javascript >= 0.7.1.0 && < 0.8,
		-- language-lua-0.11.0.1
		-- sorki's language-lua fork from glguy's fixes the version
		-- constraints, although even thosee updates are still too old.
		-- so I made my own fork with my own fix.  So you can build from
		-- bairyn's language-lua.  (Also, this is for Lua 5.3.)  (Go ahead and
		-- ‘stack build’ to get this thing in the local directory store, for
		-- ‘stack ghc’ compilation.
		language-lua >= 0.11.0.1 && < 0.12,
		-- parsec-3.1.15.1
		parsec >= 3.1.15.1 && < 3.1.16,
		-- prettyprinter-1.7.1 -- I had to install this with stack.
		prettyprinter >= 1.7.1 && < 1.8,
	hs-source-dirs:   src
	default-language: Haskell2010
	other-extensions:
		TemplateHaskell
		GADTs

library
	ghc-options:      -Wall

	exposed-modules:
		Tollshray.Control.Evaluator
		Tollshray.Daemon.CLI
		Tollshray.Tests.All
		Tollshray.Bench.All

	-- LANGUAGE extensions used by modules in this package.
	-- other-extensions:
	build-depends:
		base ^>=4.15.1.0,

		-- I haven't looked very closely to see which versions work.  Maybe
		-- older ones work, but for now I either just put the newest one on
		-- there or put the version I personally have installed.
		bytestring >= 0.11.3.1 && < 0.11.4,
		-- template-haskell: I have 2.17.0.0 installed.
		template-haskell >= 2.17.0.0 && < 2.19,
		-- language-rust-0.2.0.27's latest on Hackage is too old; you'll need
		-- the latest on GitHub to build without error.  You can probably build
		-- it by hand by cloning it and running
		-- ‘cabal v2-build && cabal v2-install --lib’ or
		-- ‘stack init && stack install’.
		language-rust >= 0.2.0.27 && < 0.2.2,
		-- languag-c-0.9.1
		language-c >= 0.9.1 && < 0.10,
		-- language-java-0.2.9
		language-java >= 0.2.9 && < 0.3,
		-- language-python-0.5.8
		language-python >= 0.5.8 && < 0.6,
		-- language-bash-0.9.2
		language-bash >= 0.9.2 && < 0.10,
		-- language-javascript-0.7.1.0
		language-javascript >= 0.7.1.0 && < 0.8,
		-- language-lua-0.11.0.1
		-- sorki's language-lua fork from glguy's fixes the version
		-- constraints, although even thosee updates are still too old.
		-- so I made my own fork with my own fix.  So you can build from
		-- bairyn's language-lua.  (Also, this is for Lua 5.3.)
		language-lua >= 0.11.0.1 && < 0.12,
		-- parsec-3.1.15.1
		parsec >= 3.1.15.1 && < 3.1.16,
		-- prettyprinter-1.7.1 -- I had to install this with stack.
		prettyprinter >= 1.7.1 && < 1.8,
	hs-source-dirs:   src
	default-language: Haskell2010
	-- TODO (external): ‘TemplateHaskell’ with a comma made ‘stack’ emit a weird
	-- error message:
	-- 	% stack build
	-- 	stack: src/Pantry/Types.hs:(1136,3)-(1151,37): Non-exhaustive patterns in case
	other-extensions:
		TemplateHaskell
		GADTs

Test-Suite tollshray-test
	type:              exitcode-stdio-1.0
	ghc-options:      -Wall
	default-language:  Haskell2010
	other-extensions:
		TemplateHaskell
		GADTs
	hs-source-dirs:    src
	-- TODO (external): ‘TemplateHaskell’ with a comma made ‘stack’ emit a weird
	-- error message:
	-- 	% stack build
	-- 	stack: src/Pantry/Types.hs:(1136,3)-(1151,37): Non-exhaustive patterns in case
	other-extensions:
		TemplateHaskell
	main-is:           TestTollshray.hs
	other-modules:
		Tollshray.Control.Evaluator
		Tollshray.Daemon.CLI
		Tollshray.Tests.All
		Tollshray.Bench.All
	build-depends:
		base ^>=4.15.1.0,
		tollshray,

		-- I haven't looked very closely to see which versions work.  Maybe
		-- older ones work, but for now I either just put the newest one on
		-- there or put the version I personally have installed.
		bytestring >= 0.11.3.1 && < 0.11.4,
		-- template-haskell: I have 2.17.0.0 installed.
		template-haskell >= 2.17.0.0 && < 2.19,
		-- language-rust-0.2.0.27's latest on Hackage is too old; you'll need
		-- the latest on GitHub to build without error.  You can probably build
		-- it by hand by cloning it and running
		-- ‘cabal v2-build && cabal v2-install --lib’ or
		-- ‘stack init && stack install’.
		language-rust >= 0.2.0.27 && < 0.2.2,
		-- languag-c-0.9.1
		language-c >= 0.9.1 && < 0.10,
		-- language-java-0.2.9
		language-java >= 0.2.9 && < 0.3,
		-- language-python-0.5.8
		language-python >= 0.5.8 && < 0.6,
		-- language-bash-0.9.2
		language-bash >= 0.9.2 && < 0.10,
		-- language-javascript-0.7.1.0
		-- I had to run ‘stack install language-javascript’ here, since with
		-- user-level cabal-install v2, it seemed to fail to build.
		language-javascript >= 0.7.1.0 && < 0.8,
		-- language-lua-0.11.0.1
		-- sorki's language-lua fork from glguy's fixes the version
		-- constraints, although even thosee updates are still too old.
		-- so I made my own fork with my own fix.  So you can build from
		-- bairyn's language-lua.  (Also, this is for Lua 5.3.)  (Go ahead and
		-- ‘stack build’ to get this thing in the local directory store, for
		-- ‘stack ghc’ compilation.
		language-lua >= 0.11.0.1 && < 0.12,
		-- parsec-3.1.15.1
		parsec >= 3.1.15.1 && < 3.1.16,
		-- prettyprinter-1.7.1 -- I had to install this with stack.
		prettyprinter >= 1.7.1 && < 1.8,

		-- HUnit-1.6.2.0
		HUnit >= 1.6.2.0 && < 1.7,
		-- QuickCheck-
		QuickCheck >= 2.14.2 && < 2.15,

Benchmark tollshray-bench
	type:              exitcode-stdio-1.0
	ghc-options:      -Wall
	default-language:  Haskell2010
	other-extensions:
		TemplateHaskell
		GADTs
	hs-source-dirs:    src
	-- TODO (external): ‘TemplateHaskell’ with a comma made ‘stack’ emit a weird
	-- error message:
	-- 	% stack build
	-- 	stack: src/Pantry/Types.hs:(1136,3)-(1151,37): Non-exhaustive patterns in case
	main-is:           BenchTollshray.hs
	other-modules:
		Tollshray.Control.Evaluator
		Tollshray.Daemon.CLI
		Tollshray.Tests.All
		Tollshray.Bench.All
	build-depends:
		base ^>=4.15.1.0,
		tollshray,

		-- I haven't looked very closely to see which versions work.  Maybe
		-- older ones work, but for now I either just put the newest one on
		-- there or put the version I personally have installed.
		bytestring >= 0.11.3.1 && < 0.11.4,
		-- template-haskell: I have 2.17.0.0 installed.
		template-haskell >= 2.17.0.0 && < 2.19,
		-- language-rust-0.2.0.27's latest on Hackage is too old; you'll need
		-- the latest on GitHub to build without error.  You can probably build
		-- it by hand by cloning it and running
		-- ‘cabal v2-build && cabal v2-install --lib’ or
		-- ‘stack init && stack install’.
		language-rust >= 0.2.0.27 && < 0.2.2,
		-- languag-c-0.9.1
		language-c >= 0.9.1 && < 0.10,
		-- language-java-0.2.9
		language-java >= 0.2.9 && < 0.3,
		-- language-python-0.5.8
		language-python >= 0.5.8 && < 0.6,
		-- language-bash-0.9.2
		language-bash >= 0.9.2 && < 0.10,
		-- language-javascript-0.7.1.0
		-- I had to run ‘stack install language-javascript’ here, since with
		-- user-level cabal-install v2, it seemed to fail to build.
		language-javascript >= 0.7.1.0 && < 0.8,
		-- language-lua-0.11.0.1
		-- sorki's language-lua fork from glguy's fixes the version
		-- constraints, although even thosee updates are still too old.
		-- so I made my own fork with my own fix.  So you can build from
		-- bairyn's language-lua.  (Also, this is for Lua 5.3.)  (Go ahead and
		-- ‘stack build’ to get this thing in the local directory store, for
		-- ‘stack ghc’ compilation.
		language-lua >= 0.11.0.1 && < 0.12,
		-- parsec-3.1.15.1
		parsec >= 3.1.15.1 && < 3.1.16,
		-- prettyprinter-1.7.1 -- I had to install this with stack.
		prettyprinter >= 1.7.1 && < 1.8,

		-- criterion-1.5.13.0
		criterion >= 1.5.13.0 && < 1.6,
